<resources>
    <string name="app_name">Warehouse Inventory App</string>
    <string name="frozen_item_unchecked">NO</string>
    <string name="frozen_item_checked">YES</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="frozen_item">Frozen Item</string>
    <string name="add_new_item_btn">Add New Item</string>
    <string name="clear_all_item_btn">Clear All Items</string>
    <string name="blank">""</string>
    <string name="toolbar_title">Warehouse Inventory App W10</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
